--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ var namMember = new Array(
 "Nigel Badminton",
 "Roach",
 "Calico Jack",
-"Jim Jimenez"<br><img src="https://static.wikia.nocookie.net/our-flag-means-death/images/d/d1/JimBasci.jpg/revision/latest/thumbnail/width/360/height/360?cb=20220327213947"/>,
+"Jim Jimenez",
 "Officer Wellington",
 "Izzy Hands",
 "Steak Knife",
