--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ var namMember = new Array(
 "Nigel Badminton",
 "Roach",
 "Calico Jack",
-"Jim Jimenez",
+"Jim Jimenez<br /><img width=\"100px\" src=\"https://i.imgur.com/WQjCZof.png\">",
 "Officer Wellington",
 "Izzy Hands",
 "Steak Knife",
