--- a/index.html
+++ b/index.html
@@ -19,48 +19,56 @@
  
 var namMember = new Array(
  
-"Anne Bonny",
-"Ned Lowe",
-"Mary Bonnet",
-"Hellkat Maggie",
-"Auntie",
-"Ivan",
-"Evelyn Higgins",
-"Prince Ricky Banes",
-"Wee John",
-"Antoinette",
-"Oluwande Boodhari",
-"Geraldo",
-"Alma Bonnet",
-"Spanish Jackie",
-"Mary Read",
-"Frenchie",
-"Captain Hornigold",
-"Karl the Seagull",
-"Gabriel",
-"Lucius Spriggs",
-"Doug",
-"Archie",
-"Officer Hornberry",
-"Edward Teach",
-"Zheng Yi Sao",
-"Black Pete",
-"Buttons",
-"Stede Bonnet",
-"The Swede",
-"Louis Bonnet",
-"Fang",
-"King George I",
-"Nana",
-"Chauncey Badminton",
-"Nigel Badminton",
-"Roach",
-"Calico Jack",
-"Jim Jimenez<br /><img width=\"100px\" src=\"https://i.imgur.com/WQjCZof.png\">",
-"Officer Wellington",
-"Izzy Hands",
-"Steak Knife",
-"Olivia the Seagull"
+"Pop Pop<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Pop%20Pop.png\">",
+"Edward Teach<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Edward%20Teach.png\">",
+"Hellkat Maggie<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Hellkat%20Maggie.png\">",
+"Calico Jack<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Calico%20Jack.png\">",
+"Oluwande Boodhari<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Oluwande%20Boodhari.png\">",
+"Mary Read<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Mary%20Read.png\">",
+"Doug<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Doug.png\">",
+"Nigel Badminton<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Nigel%20Badminton.png\">",
+"Father Teach<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Father%20Teach.png\">",
+"Mary Bonnet<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Mary%20Bonnet.png\">",
+"Buttons<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Buttons.png\">",
+"Lucius Spriggs<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Lucius%20Spriggs.png\">",
+"Abshir<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Abshir.png\">",
+"Frenchie<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Frenchie.png\">",
+"Zheng Yi Sao<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Zheng%20Yi%20Sao.png\">",
+"Officer Wellington<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Officer%20Wellington.png\">",
+"Gabriel<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Gabriel.png\">",
+"Black Pete<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Black%20Pete.png\">",
+"Archie<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Archie.png\">",
+"Izzy Hands<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Izzy%20Hands.png\">",
+"Fang<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Fang.png\">",
+"Father Bonnet<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Father%20Bonnet.png\">",
+"Ned the Jungle Cat<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Ned%20the%20Jungle%20Cat.png\">",
+"Wee John<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Wee%20John.png\">",
+"Captain Hornigold<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Captain%20Hornigold.png\">",
+"Stede Bonnet<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Stede%20Bonnet.png\">",
+"Evelyn Higgins<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Evelyn%20Higgins.png\">",
+"Mother Teach<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Mother%20Teach.png\">",
+"Alma Bonnet<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Alma%20Bonnet.png\">",
+"Geraldo<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Geraldo.png\">",
+"Steak Knife<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Steak%20Knife.png\">",
+"Olivia the Seagull<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Olivia%20the%20Seagull.png\">",
+"Anne Bonny<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Anne%20Bonny.png\">",
+"Karl the Seagull<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Karl%20the%20Seagull.png\">",
+"Auntie<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Auntie.png\">",
+"Chauncey Badminton<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Chauncey%20Badminton.png\">",
+"Louis Bonnet<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Louis%20Bonnet.png\">",
+"Spanish Jackie<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Spanish%20Jackie.png\">",
+"Nana<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Nana.png\">",
+"Ned Lowe<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Ned%20Lowe.png\">",
+"Ivan<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Ivan.png\">",
+"Prince Ricky Banes<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Prince%20Ricky%20Banes.png\">",
+"Jim Jimenez<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Jim%20Jimenez.png\">",
+"Antoinette<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Antoinette.png\">",
+"Officer Hornberry<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Officer%20Hornberry.png\">",
+"King George I<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/King%20George%20I.png\">",
+"Bloodbucket Bill<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Bloodbucket%20Bill.png\">",
+"Chief Mabo<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Chief%20Mabo.png\">",
+"Roach<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Roach.png\">",
+"The Swede<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/The%20Swede.png\">"
  
  
 );
