--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  
 var namMember = new Array(
  
-"Pop Pop<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Pop%20Pop.png\">",
+"Pop Pop<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Pop-Pop.png\">",
 "Edward Teach<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Edward%20Teach.png\">",
 "Hellkat Maggie<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Hellkat%20Maggie.png\">",
 "Calico Jack<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Calico%20Jack.png\">",
