--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<link rel="shortcut icon" href="http://sv.tinypic.com?ref=qq68e9">
  
 <html>
  
@@ -659,7 +661,7 @@ display: none
  
 <p class="instructions">
 <center><br /><br />
-<b>OUR FLAG MEANS DEATH CHARACTER SORTER</b><br /><br>pick who you like better in each battle to get an accurate list of your favourite characters from the show.<br />note: hitting 'no opinion' or 'I like both' frequently will negatively affect your results.<br /><br /></center>
+<b>OUR FLAG MEANS DEATH CHARACTER SORTER</b><br /><br>pick who you like better in each battle to get an accurate list of your favourite characters from the show.<br />note: the more often you hit 'no opinion' or 'I like both', the less accurate your results will be! <br /><br /></center>
  
  
  
