--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ var namMember = new Array(
  
 //*********************************************************
  
- 
+namMember.shuffle();
  
 var lstMember = new Array();
  
