--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@ display: none
 </head>
 <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:600' rel='stylesheet' type='text/css'>
  
-<body text="#000000" bgcolor="#ffffff" link="#e097d9" vlink="#e097d9" alink="#79a2c9">
+<body text="#ffffff" bgcolor="#0A0A0A link="#e097d9" vlink="#e097d9" alink="#79a2c9">
  
  
  
