--- a/index.html
+++ b/index.html
@@ -559,9 +559,10 @@ return str;
  
 #mainTable{
  
-font-size: 19px;
- 
-font-family: 'Times New Roman', serif;
+font: 12px/1.4em 'courier';
+
+text-shadow: 0.133rem 0.133rem 0.125rem #191818;
+
  
 text-align: center;
  
@@ -576,16 +577,18 @@ margin-right: auto;
 border-collapse: separate;
  
 border-spacing: 10px 5px;
+
+border: 1px solid #330000;
  
 }
  
 #leftField{
  
-width: 120px;
+width: 200px;
  
-height: 150px;
+height: 300px;
  
-border: 1px solid #000;
+border: 1px solid #330000;
  
 cursor: pointer;
  
@@ -593,11 +596,11 @@ cursor: pointer;
  
 #rightField{
  
-width: 120px;
+width: 200px;
  
-height: 150px;
+height: 300px;
  
-border: 1px solid #000;
+border: 1px solid #330000;
  
 cursor: pointer;
  
@@ -609,7 +612,7 @@ width: 120px;
  
 height: 70px;
  
-border: 1px solid #000;
+border: 1px solid #330000;
  
 cursor: pointer;
  
@@ -635,7 +638,15 @@ width: 600px;
  
 margin: 0 auto;
  
-font-family: 'Times New Roman', erif;
+background: #000000;
+ 
+color: #ffffff;
+ 
+font: 12px/1.4em 'courier';
+
+text-shadow: 0.133rem 0.133rem 0.125rem #191818;
+
+text-align: center;
 
 }
 
