--- a/index.html
+++ b/index.html
@@ -577,8 +577,13 @@ margin-right: auto;
 border-collapse: separate;
  
 border-spacing: 10px 5px;
-
-border: 1px solid #330000;
+    border: 13px solid #330000;
+    background: #940707;
+    width: 550px;
+    max-width: 550px;
+    min-width: 350px;
+    padding-bottom: 30px;
+    margin: 100px auto 0 auto;
  
 }
  
