--- a/index.html
+++ b/index.html
@@ -588,9 +588,9 @@ border-spacing: 10px 5px;
  
 #leftField{
  
-width: 200px;
+width: 165px;
  
-height: 200px;
+height: fit-content;
  
 border: 2px solid #330000;
  
@@ -600,9 +600,9 @@ cursor: pointer;
  
 #rightField{
  
-width: 200px;
+width: 165px;
  
-height: 200px;
+height: fit-content;
  
 border: 2px solid #330000;
  
@@ -616,7 +616,7 @@ width: 120px;
  
 height: 70px;
  
-border: 1px solid #330000;
+border: 2px solid #330000;
  
 cursor: pointer;
  
