--- a/index.html
+++ b/index.html
@@ -18,56 +18,56 @@
  
 var namMember = new Array(
  
-"Pop Pop<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Pop-Pop.png\">",
-"Edward Teach<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Edward%20Teach.png\">",
-"Hellkat Maggie<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Hellkat%20Maggie.png\">",
-"Calico Jack<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Calico%20Jack.png\">",
-"Oluwande Boodhari<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Oluwande%20Boodhari.png\">",
-"Mary Read<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Mary%20Read.png\">",
-"Doug<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Doug.png\">",
-"Nigel Badminton<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Nigel%20Badminton.png\">",
-"Father Teach<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Father%20Teach.png\">",
-"Mary Bonnet<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Mary%20Bonnet.png\">",
-"Buttons<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Buttons.png\">",
-"Lucius Spriggs<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Lucius%20Spriggs.png\">",
-"Abshir<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Abshir.png\">",
-"Frenchie<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Frenchie.png\">",
-"Zheng Yi Sao<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Zheng%20Yi%20Sao.png\">",
-"Officer Wellington<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Officer%20Wellington.png\">",
-"Gabriel<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Gabriel.png\">",
-"Black Pete<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Black%20Pete.png\">",
-"Archie<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Archie.png\">",
-"Izzy Hands<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Izzy%20Hands.png\">",
-"Fang<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Fang.png\">",
-"Father Bonnet<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Father%20Bonnet.png\">",
-"Ned the Jungle Cat<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Ned%20the%20Jungle%20Cat.png\">",
-"Wee John<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Wee%20John.png\">",
-"Captain Hornigold<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Captain%20Hornigold.png\">",
-"Stede Bonnet<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Stede%20Bonnet.png\">",
-"Evelyn Higgins<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Evelyn%20Higgins.png\">",
-"Mother Teach<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Mother%20Teach.png\">",
-"Alma Bonnet<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Alma%20Bonnet.png\">",
-"Geraldo<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Geraldo.png\">",
-"Steak Knife<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Steak%20Knife.png\">",
-"Olivia the Seagull<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Olivia%20the%20Seagull.png\">",
-"Anne Bonny<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Anne%20Bonny.png\">",
-"Karl the Seagull<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Karl%20the%20Seagull.png\">",
-"Auntie<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Auntie.png\">",
-"Chauncey Badminton<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Chauncey%20Badminton.png\">",
-"Louis Bonnet<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Louis%20Bonnet.png\">",
-"Spanish Jackie<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Spanish%20Jackie.png\">",
-"Nana<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Nana.png\">",
-"Ned Lowe<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Ned%20Lowe.png\">",
-"Ivan<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Ivan.png\">",
-"Prince Ricky Banes<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Prince%20Ricky%20Banes.png\">",
-"Jim Jimenez<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Jim%20Jimenez.png\">",
-"Antoinette<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Antoinette.png\">",
-"Officer Hornberry<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Officer%20Hornberry.png\">",
-"King George I<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/King%20George%20I.png\">",
-"Bloodbucket Bill<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Bloodbucket%20Bill.png\">",
-"Chief Mabo<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Chief%20Mabo.png\">",
-"Roach<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Roach.png\">",
-"The Swede<br /><img width=\100px\" src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/The%20Swede.png\">"
+"Pop Pop<br /><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Pop-Pop.png\">",
+"Edward Teach<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Edward%20Teach.png\">",
+"Hellkat Maggie<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Hellkat%20Maggie.png\">",
+"Calico Jack<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Calico%20Jack.png\">",
+"Oluwande Boodhari<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Oluwande%20Boodhari.png\">",
+"Mary Read<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Mary%20Read.png\">",
+"Doug<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Doug.png\">",
+"Nigel Badminton<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Nigel%20Badminton.png\">",
+"Father Teach<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Father%20Teach.png\">",
+"Mary Bonnet<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Mary%20Bonnet.png\">",
+"Buttons<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Buttons.png\">",
+"Lucius Spriggs<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Lucius%20Spriggs.png\">",
+"Abshir<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Abshir.png\">",
+"Frenchie<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Frenchie.png\">",
+"Zheng Yi Sao<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Zheng%20Yi%20Sao.png\">",
+"Officer Wellington<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Officer%20Wellington.png\">",
+"Gabriel<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Gabriel.png\">",
+"Black Pete<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Black%20Pete.png\">",
+"Archie<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Archie.png\">",
+"Izzy Hands<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Izzy%20Hands.png\">",
+"Fang<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Fang.png\">",
+"Father Bonnet<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Father%20Bonnet.png\">",
+"Ned the Jungle Cat<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Ned%20the%20Jungle%20Cat.png\">",
+"Wee John<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Wee%20John.png\">",
+"Captain Hornigold<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Captain%20Hornigold.png\">",
+"Stede Bonnet<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Stede%20Bonnet.png\">",
+"Evelyn Higgins<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Evelyn%20Higgins.png\">",
+"Mother Teach<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Mother%20Teach.png\">",
+"Alma Bonnet<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Alma%20Bonnet.png\">",
+"Geraldo<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Geraldo.png\">",
+"Steak Knife<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Steak%20Knife.png\">",
+"Olivia the Seagull<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Olivia%20the%20Seagull.png\">",
+"Anne Bonny<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Anne%20Bonny.png\">",
+"Karl the Seagull<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Karl%20the%20Seagull.png\">",
+"Auntie<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Auntie.png\">",
+"Chauncey Badminton<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Chauncey%20Badminton.png\">",
+"Louis Bonnet<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Louis%20Bonnet.png\">",
+"Spanish Jackie<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Spanish%20Jackie.png\">",
+"Nana<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Nana.png\">",
+"Ned Lowe<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Ned%20Lowe.png\">",
+"Ivan<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Ivan.png\">",
+"Prince Ricky Banes<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Prince%20Ricky%20Banes.png\">",
+"Jim Jimenez<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Jim%20Jimenez.png\">",
+"Antoinette<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Antoinette.png\">",
+"Officer Hornberry<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Officer%20Hornberry.png\">",
+"King George I<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/King%20George%20I.png\">",
+"Bloodbucket Bill<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Bloodbucket%20Bill.png\">",
+"Chief Mabo<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Chief%20Mabo.png\">",
+"Roach<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Roach.png\">",
+"The Swede<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/The%20Swede.png\">"
  
  
 );
