--- a/index.html
+++ b/index.html
@@ -596,6 +596,9 @@ border: 2px solid #330000;
  
 cursor: pointer;
  
+vertical-align: bottom;
+
+font-weight: bold;
 }
  
 #rightField{
@@ -607,6 +610,10 @@ height: fit-content;
 border: 2px solid #330000;
  
 cursor: pointer;
+ 
+vertical-align: bottom;
+
+font-weight: bold;
  
 }
  
