--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  
 var namMember = new Array(
  
-"Pop Pop<br /><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Pop-Pop.png\">",
+"Pop Pop<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Pop-Pop.png\">",
 "Edward Teach<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Edward%20Teach.png\">",
 "Hellkat Maggie<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Hellkat%20Maggie.png\">",
 "Calico Jack<p><img width=\100px\ src=\"https://raw.githubusercontent.com/edthekraken/ofmd-charas/main/Calico%20Jack.png\">",
