--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ width: 165px;
  
 height: fit-content;
  
-border: 2px solid #330000;
+border: 0px solid #330000;
  
 cursor: pointer;
  
@@ -607,7 +607,7 @@ width: 165px;
  
 height: fit-content;
  
-border: 2px solid #330000;
+border: 0px solid #330000;
  
 cursor: pointer;
  
@@ -623,7 +623,7 @@ width: 120px;
  
 height: 70px;
  
-border: 2px solid #330000;
+border: 1px solid #330000;
  
 cursor: pointer;
  
@@ -666,6 +666,20 @@ text-align: center;
 display: none
  
 }
+
+header {
+    border: 13px solid #330000;
+    background: #940707;
+    width: 550px;
+    max-width: 550px;
+    min-width: 350px;
+    padding-bottom: 30px;
+    margin: 100px auto 0 auto;
+}
+
+header {
+    display: block;
+}
  
 -->
  
@@ -686,13 +700,11 @@ display: none
  
  
  
-<p class="instructions">
+<header>
 <center><br /><br />
-<b>OUR FLAG MEANS DEATH CHARACTER SORTER</b><br /><br>pick who you like better in each battle to get an accurate list of your favourite characters from the show.<br />note: the more often you hit 'no opinion' or 'I like both', the less accurate your results will be! <br /><br /></center>
+<b><h1></h1>OUR FLAG MEANS DEATH CHARACTER SORTER</h1></b><br /><br>Pick which character you prefer in each matchup to get an accurate list of your favourite characters from the show.<br />Note: The more often you hit 'no opinion' or 'I like both', the less accurate your results will be! <br /><br /></center>
+ </header>
  
- 
- 
-</p>
  
  
  
