--- a/index.html
+++ b/index.html
@@ -645,8 +645,6 @@ color: #8f8f8f;
  
 body {
  
-width: 600px;
- 
 margin: 0 auto;
  
 background: #000000;
@@ -675,6 +673,25 @@ header {
     min-width: 350px;
     padding-bottom: 30px;
     margin: 100px auto 0 auto;
+ font: 12px/1.4em 'courier';
+
+text-shadow: 0.133rem 0.133rem 0.125rem #191818;
+
+ 
+text-align: center;
+ 
+vertical-align: middle;
+
+ 
+margin-left: auto;
+ 
+margin-right: auto;
+ 
+border-collapse: separate;
+ 
+border-spacing: 10px 5px;
+
+ 
 }
 
 header {
