--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ nrec = 0;
  
 if (cmp1<0) {
  
-str = "battle #"+(numQuestion-1)+"<br>"+Math.floor(finishSize*100/totalSize)+"% sorted.";
+str = "Battle #"+(numQuestion-1)+"<br>"+Math.floor(finishSize*100/totalSize)+"% sorted.";
  
 document.getElementById("battleNumber").innerHTML = str;
  
